# fairwaycut

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PRD.md  README.md  index.html  styles.css
docs/privacy/: index.html
docs/terms/: index.html
scripts/: analyze_segment.py  analyze_timestamps.py  analyze_transients.py  compare_viz_styles.py  debug_snr.py  detect_impacts.py  plot_audio.py
src/fairwaycut/: __init__.py  audio.py  cli.py  detection.py  ui.py  visualization.py
src/fairwaycut/audio/: __init__.py  detection.py  extraction.py
src/fairwaycut/core/: __init__.py  config.py  models.py
src/fairwaycut/fusion/: __init__.py  detector.py
src/fairwaycut/pose/: __init__.py  estimator.py  landmarks.py  normalizer.py  smoothing.py  swing_phases.py
src/fairwaycut/pose/backends/: __init__.py  apple_vision.py  base.py  mediapipe.py
src/fairwaycut/video/: __init__.py  effects.py  extraction.py  generator.py  overlays.py
src/fairwaycut/visualization/: __init__.py  composite.py  interactive.py  plot3d.py  plots.py  viewer3d.py  voxel.py
tests/: test_audio_extraction.py  test_cli_extract.py  test_detector.py  test_video_extraction.py
